# SQL-proxy

./: CMakeLists.txt  README.md
include/: Logger.hpp  PacketParser.hpp  ProxyServer.hpp  SocketManager.h  SocketManager.hpp
src/: Logger.cpp  PacketParser.cpp  ProxyServer  ProxyServer.cpp  SocketManager.cpp  a.cpp  a.out  main.cpp
test/: TestProxyServer.cpp  test_proxy_server.cpp
